--- a/styles/index.css
+++ b/styles/index.css
@@ -9,3 +9,11 @@
     margin: auto;
     margin-bottom: 3rem;
 }
+
+.children {
+    max-width: 1200px;
+    margin: auto;
+    margin-bottom: 3rem;
+    background-color: rgb(54, 52, 52);
+    color: aliceblue;
+}
