--- a/styles/index.css
+++ b/styles/index.css
@@ -17,3 +17,20 @@
     background-color: rgb(54, 52, 52);
     color: aliceblue;
 }
+
+.desc {
+    position: relative;
+    padding-left: 800px;
+    font-size: 20px;
+}
+
+ListGroup.Item {
+    
+}
+
+nav.main-nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
